[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "yaclog-ksp"
description = "Kerbal Space Program changelog file generator"
readme = "README.md"
authors = [{ name = "Andrew Cassidy", email = "drewcassidy@me.com" }]
keywords = ["changelog", "commandline", "markdown", "KSP"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment :: Simulation"
]

requires-python = ">= 3.9"
dependencies = [
    "Click >= 8.0",
    "yaclog ~= 1.0"
]
dynamic = ["version"]


[project.scripts]
yaclog-ksp = "yaclog_ksp.__main__:main"

[project.urls]
Source = "https://github.com/drewcassidy/yaclog-ksp"
Changelog = "https://github.com/drewcassidy/yaclog-ksp/blob/main/CHANGELOG.md"
"Forum Post" = "https://forum.kerbalspaceprogram.com/index.php?/topic/201784-*"

[tool.setuptools_scm]
fallback_version = '0.0.0'

[tool.setuptools.packages.find]
include = ["yaclog_ksp"]