[metadata]
# until setuptools supports PEP621, this will have to do
name = yaclog-ksp
description = Kerbal Space Program changelog file generator
author = Andrew Cassidy
license = AGPLv3
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

keywords = changelog, commandline, markdown, KSP
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment :: Simulation
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Utilities

project_urls =
    Changelog = https://github.com/drewcassidy/yaclog-ksp/blob/main/CHANGELOG.md
    Source = https://github.com/drewcassidy/yaclog-ksp
    Forum Post = https://forum.kerbalspaceprogram.com/index.php?/topic/201784-*

[options]
install_requires =
    Click ~= 7.0
    yaclog ~= 1.0
python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    yaclog-ksp = yaclog_ksp.__main__:main